welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: not found: value avancer
	case "R" => droite();avancer()
                             ^BDR2:5: error: not found: value avancer
	case "L" => gauche();avancer()
                             ^BDR2:6: error: not found: value avancer
	case "I" => gauche();gauche();avancer()
                                      ^BDR2:7: error: not found: value avancer
	case "A" => avancer();
                    ^BDR2:8: error: not found: value avancer
	case "B" => avancer();avancer()
                    ^BDR2:8: error: not found: value avancer
	case "B" => avancer();avancer()
                              ^BDR2:9: error: not found: value avancer
	case "C" => avancer();avancer();avancer()
                    ^BDR2:9: error: not found: value avancer
	case "C" => avancer();avancer();avancer()
                              ^BDR2:9: error: not found: value avancer
	case "C" => avancer();avancer();avancer()
                                        ^BDR2:10: error: not found: value avancer
	case "D" => avancer();avancer();avancer();avancer()
                    ^BDR2:10: error: not found: value avancer
	case "D" => avancer();avancer();avancer();avancer()
                              ^BDR2:10: error: not found: value avancer
	case "D" => avancer();avancer();avancer();avancer()
                                        ^BDR2:10: error: not found: value avancer
	case "D" => avancer();avancer();avancer();avancer()
                                                  ^BDR2:11: error: not found: value avancer
	case "E" => avancer();avancer();avancer();avancer();avancer()
                    ^BDR2:11: error: not found: value avancer
	case "E" => avancer();avancer();avancer();avancer();avancer()
                              ^BDR2:11: error: not found: value avancer
	case "E" => avancer();avancer();avancer();avancer();avancer()
                                        ^BDR2:11: error: not found: value avancer
	case "E" => avancer();avancer();avancer();avancer();avancer()
                                                  ^BDR2:11: error: not found: value avancer
	case "E" => avancer();avancer();avancer();avancer();avancer()
                                                            ^BDR2:12: error: not found: value avancer
	case "F" => avancer();avancer();avancer();avancer();avancer();avancer()
                    ^BDR2:12: error: not found: value avancer
	case "F" => avancer();avancer();avancer();avancer();avancer();avancer()
                              ^BDR2:12: error: not found: value avancer
	case "F" => avancer();avancer();avancer();avancer();avancer();avancer()
                                        ^BDR2:12: error: not found: value avancer
	case "F" => avancer();avancer();avancer();avancer();avancer();avancer()
                                                  ^BDR2:12: error: not found: value avancer
	case "F" => avancer();avancer();avancer();avancer();avancer();avancer()
                                                            ^BDR2:12: error: not found: value avancer
	case "F" => avancer();avancer();avancer();avancer();avancer();avancer()
                                                                      ^BDR2:13: error: not found: value reculer
	case "Z" => reculer()
                    ^BDR2:14: error: not found: value reculer
	case "Y" => reculer();reculer()
                    ^BDR2:14: error: not found: value reculer
	case "Y" => reculer();reculer()
                              ^BDR2:15: error: not found: value reculer
	case "X" => reculer();reculer();reculer()
                    ^BDR2:15: error: not found: value reculer
	case "X" => reculer();reculer();reculer()
                              ^BDR2:15: error: not found: value reculer
	case "X" => reculer();reculer();reculer()
                                        ^BDR2:16: error: not found: value reculer
	case "W" => reculer();reculer();reculer();reculer()
                    ^BDR2:16: error: not found: value reculer
	case "W" => reculer();reculer();reculer();reculer()
                              ^BDR2:16: error: not found: value reculer
	case "W" => reculer();reculer();reculer();reculer()
                                        ^BDR2:16: error: not found: value reculer
	case "W" => reculer();reculer();reculer();reculer()
                                                  ^BDR2:17: error: not found: value reculer
	case "V" => reculer();reculer();reculer();reculer();reculer()
                    ^BDR2:17: error: not found: value reculer
	case "V" => reculer();reculer();reculer();reculer();reculer()
                              ^BDR2:17: error: not found: value reculer
	case "V" => reculer();reculer();reculer();reculer();reculer()
                                        ^BDR2:17: error: not found: value reculer
	case "V" => reculer();reculer();reculer();reculer();reculer()
                                                  ^BDR2:17: error: not found: value reculer
	case "V" => reculer();reculer();reculer();reculer();reculer()
                                                            ^BDR2:18: error: not found: value reculer
	case "U" => reculer();reculer();reculer();reculer();reculer();reculer()
                    ^BDR2:18: error: not found: value reculer
	case "U" => reculer();reculer();reculer();reculer();reculer();reculer()
                              ^BDR2:18: error: not found: value reculer
	case "U" => reculer();reculer();reculer();reculer();reculer();reculer()
                                        ^BDR2:18: error: not found: value reculer
	case "U" => reculer();reculer();reculer();reculer();reculer();reculer()
                                                  ^BDR2:18: error: not found: value reculer
	case "U" => reculer();reculer();reculer();reculer();reculer();reculer()
                                                            ^BDR2:18: error: not found: value reculer
	case "U" => reculer();reculer();reculer();reculer();reculer();reculer()
                                                                      ^